--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -2,6 +2,7 @@
 # why-sec
 --------------------------------------------------------------*/
 .why-sec {
+	position: relative;
 	padding-top: 40px;
 	padding-bottom: 120px;
 	@media only screen and (max-width: 1199px) {
@@ -18,6 +19,26 @@
 		padding-left: 15px;
 		padding-right: 15px;
 	}
+
+	.middle {
+		position: absolute;
+		top: 16%;
+		left: 0;
+		z-index: -1;
+		height: 350px;
+		@media only screen and (max-width: 1399px) {
+			height: 300px;
+			left: -10px;
+		}
+		@media only screen and (max-width: 991px) {
+			left: -40px;
+		}
+		@media only screen and (max-width: 767px) {
+			height: 220px;
+			left: -70px;
+		}
+	}
+
 	.container {
 		@media (min-width: 1200px) {
 			max-width: 1250px;
@@ -36,7 +57,7 @@
 		}
 		h2 {
 			font-size: 40px;
-			font-weight: 500;
+			font-weight: 600;
 			color: var(--title-color);
 			margin-bottom: 10px;
 			@media only screen and (max-width: 991px) {
@@ -60,7 +81,7 @@
 		display: inline-flex;
 		align-items: center;
 		text-decoration: none;
-		color: var(--secondary-color);
+		color: var(--text-color);
 		font-weight: 600;
 		margin-top: 16px;
 		transition: all 0.2s ease-in;
@@ -72,7 +93,7 @@
 		}
 		svg {
 			height: 10px;
-			fill: var(--secondary-color);
+			fill: var(--text-color);
 			transition: all 0.2s ease-in;
 			margin-left: 4px;
 		}
@@ -84,16 +105,11 @@
 	}
 }
 .why-single {
-	background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-		linear-gradient(
-			98.82deg,
-			rgba(48, 62, 98, 0.63) -6.54%,
-			rgba(48, 62, 57, 0.63) 106.08%
-		);
-	box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.03);
-	border-radius: 12px;
 	height: 100%;
 	overflow: hidden;
+	border-radius: 20px;
+	background: rgba(15, 11, 47, 0.5);
+	box-shadow: 0px 35px 100px 0px rgba(0, 0, 0, 0.15);
 
 	@media only screen and (max-width: 767px) {
 		max-width: 400px;
@@ -115,7 +131,7 @@
 		}
 
 		h3 {
-			font-size: 33px;
+			font-size: 30px;
 			color: var(--title-color);
 			font-weight: 500;
 			margin-bottom: 8px;
@@ -131,33 +147,51 @@
 		}
 		p {
 			@media only screen and (max-width: 482px) {
-				font-size: 14px;
+				font-size: 13px;
 			}
 		}
 	}
 	.head-inner {
-		max-width: 369px;
+		max-width: 389px;
 	}
 
 	.why-body {
-		background: rgba(70, 83, 117, 0.34);
 		text-align: center;
-		padding: 50px 30px;
+		padding: 0px 20px 35px 20px;
 		@media only screen and (max-width: 991px) {
-			padding: 40px 20px;
+			padding: 0px 20px 35px 20px;
 		}
 		@media only screen and (max-width: 767px) {
-			padding: 30px 20px;
+			padding: 0px 20px 35px 20px;
 		}
 		.why-logo {
-			width: 100%;
-			height: 130px;
-			object-fit: contain;
+			// -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+			// filter: grayscale(100%);
+
+			width: 200px;
+			height: 200px;
+			border-radius: 100%;
+			background-color: #402b52;
+			text-align: center;
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
 			@media only screen and (max-width: 991px) {
-				height: 115px;
+				width: 160px;
+				height: 160px;
 			}
 			@media only screen and (max-width: 767px) {
-				height: 100px;
+				width: 130px;
+				height: 130px;
+			}
+			svg {
+				object-fit: contain;
+				@media only screen and (max-width: 991px) {
+					height: 80px;
+				}
+				@media only screen and (max-width: 767px) {
+					height: 65px;
+				}
 			}
 		}
 	}
@@ -188,11 +222,7 @@
 		padding-right: 15px;
 	}
 
-	background: linear-gradient(
-		98.22deg,
-		rgba(0, 0, 0, 0.43) -6.93%,
-		rgba(0, 0, 0, 0.2064) 102.08%
-	);
+	background: linear-gradient(92deg, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.21) 100%);
 
 	.map-txt {
 		h2 {
@@ -249,18 +279,28 @@
 		margin-right: 10px;
 		display: flex;
 		align-items: center;
-		background-color: #1b2336;
+		background: linear-gradient(
+			91deg,
+			rgba(255, 239, 248, 0.4) 3.2%,
+			rgba(255, 152, 204, 0.14) 224.74%,
+			rgba(255, 130, 192, 0.07) 282.98%
+		);
+
+		box-shadow:
+			0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25) inset,
+			0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25);
+
 		border-radius: 50px;
-		padding: 5px 20px;
+		padding: 6px 20px;
 		@media only screen and (max-width: 991px) {
 			margin-bottom: 12px;
 		}
 		span {
-			color: var(--secondary-color);
+			color: var(--text-color);
 		}
 		svg {
 			height: 8px;
-			fill: var(--secondary-color);
+			fill: var(--text-color);
 			margin: 0px 10px;
 		}
 		transition: all 0.2s ease-in;
@@ -280,6 +320,7 @@
 # use-case
 --------------------------------------------------------------*/
 .use-case {
+	position: relative;
 	padding: 90px 0px;
 	@media only screen and (max-width: 991px) {
 		padding: 80px 0px;
@@ -291,6 +332,27 @@
 	@media only screen and (max-width: 482px) {
 		padding-left: 7px;
 		padding-right: 7px;
+	}
+
+	.m-r {
+		position: absolute;
+		top: 20%;
+		right: 5%;
+		height: 300px;
+		z-index: -1;
+		@media only screen and (max-width: 1199px) {
+			height: 250px;
+			right: 0%;
+			top: 15%;
+		}
+		@media only screen and (max-width: 767px) {
+			height: 200px;
+			right: -50px;
+			top: 10%;
+		}
+		@media only screen and (max-width: 482px) {
+			height: 150px;
+		}
 	}
 
 	.container {
@@ -346,11 +408,8 @@
 .case-single {
 	display: flex;
 	align-items: center;
-	background: linear-gradient(
-		98.22deg,
-		rgba(0, 0, 0, 0.43) -7.55%,
-		rgba(0, 0, 0, 0.2064) 101.47%
-	);
+	background: linear-gradient(93deg, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.21) 100%);
+
 	padding: 60px 60px;
 	border-radius: 40px;
 	@media only screen and (max-width: 1199px) {
@@ -363,22 +422,22 @@
 		padding: 20px 20px;
 		border-radius: 30px;
 	}
-	.case-logo {
+	svg {
 		width: 100%;
 		max-width: 160px;
-		height: 190px;
+		height: 170px;
 		object-fit: contain;
 		@media only screen and (max-width: 1199px) {
 			max-width: 140px;
-			height: 160px;
+			height: 150px;
 		}
 		@media only screen and (max-width: 767px) {
 			max-width: 100px;
 			height: 110px;
 		}
 		@media only screen and (max-width: 482px) {
-			width: 60px;
-			height: 70px;
+			max-width: 80px;
+			height: 90px;
 		}
 	}
 
@@ -424,11 +483,7 @@
 # team
 --------------------------------------------------------------*/
 .team {
-	background: linear-gradient(
-		98.22deg,
-		rgba(0, 0, 0, 0.43) -6.93%,
-		rgba(0, 0, 0, 0.2064) 102.08%
-	);
+	background: linear-gradient(92deg, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.21) 100%);
 	padding: 90px 0px;
 	@media only screen and (max-width: 991px) {
 		padding: 80px 0px;
@@ -474,12 +529,8 @@
 }
 
 .team-single {
-	background: radial-gradient(
-		50% 50% at 50% 50%,
-		#16213c 0%,
-		rgba(22, 33, 60, 0.55) 100%
-	);
 	border-radius: 50px;
+	background: linear-gradient(93deg, rgba(0, 0, 0, 0.43) 0%, rgba(0, 0, 0, 0.21) 100%);
 	display: block;
 	width: 100%;
 	text-decoration: none;
@@ -573,33 +624,13 @@
 --------------------------------------------------------------*/
 [data-theme="light"] {
 	body {
-		background: linear-gradient(
-				147.5deg,
-				#89cff0 0%,
-				rgba(240, 163, 182, 0) 41.46%
-			),
-			linear-gradient(
-				179.99deg,
-				rgba(251, 252, 255, 0) 14.27%,
-				#ffffff 26.88%
-			),
-			linear-gradient(40.71deg, #fcddec 53.64%, #de4e67 142.82%);
-
-		background-color: #fff;
+		background: linear-gradient(324deg, rgba(29, 188, 238, 0.62) -8.16%, rgba(252, 199, 226, 0.81) 30.14%),
+			linear-gradient(343deg, #fabfde -3.65%, #fff2f9 91.08%, rgba(80, 0, 0, 0.37) 106.58%, #fff2f9 106.58%);
 
 		@media only screen and (max-width: 767px) {
-			background: linear-gradient(
-					179.9deg,
-					#01ff70 -3.93%,
-					rgba(255, 255, 255, 0.5) 2.19%
-				),
-				linear-gradient(
-					180.15deg,
-					#de4e67 7.63%,
-					#e3667d 11.56%,
-					#fcddec 23.06%
-				),
-				linear-gradient(180deg, #fbfcff 0.22%, #ffffff 100%);
+			// background: linear-gradient(179.9deg, #01ff70 -3.93%, rgba(255, 255, 255, 0.5) 2.19%),
+			// 	linear-gradient(180.15deg, #de4e67 7.63%, #e3667d 11.56%, #fcddec 23.06%),
+			// 	linear-gradient(180deg, #fbfcff 0.22%, #ffffff 100%);
 		}
 	}
 
@@ -612,14 +643,17 @@
 						font-size: 15px;
 						font-weight: 500;
 						color: var(--title-color);
-						background: linear-gradient(
-							94.26deg,
-							rgba(232, 74, 74, 0.3) -35.67%,
-							rgba(93, 126, 201, 0.213) 121.76%
-						);
 						padding: 6px 24px;
-						border: 1px solid #000000;
 						border-radius: 10px;
+
+						border: 0.925px solid #ff00e5;
+
+						background: linear-gradient(92deg, rgba(255, 239, 248, 0.4) -5.21%, rgba(255, 130, 192, 0.07) 105.21%);
+
+						box-shadow:
+							0px 0.977px 0.977px 0px rgba(0, 0, 0, 0.25) inset,
+							0px 0.977px 0.977px 0px rgba(0, 0, 0, 0.25);
+
 						&:hover {
 							background-color: var(--primary-color);
 							color: var(--title-color);
@@ -631,13 +665,13 @@
 	}
 
 	.btn-main {
-		background: linear-gradient(
-			94.26deg,
-			rgba(232, 74, 74, 0.3) -35.67%,
-			rgba(93, 126, 201, 0.213) 121.76%
-		);
-		border: 1px solid #000000;
-		box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.16);
+		border-radius: 10px;
+		border: 1.6px solid #ff00e5;
+		background: linear-gradient(92deg, rgba(255, 239, 248, 0.4) -5.21%, rgba(255, 130, 192, 0.07) 105.21%);
+		box-shadow:
+			0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25) inset,
+			0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25);
+
 		&:hover {
 			background-color: var(--primary-color);
 			color: var(--title-color);
@@ -657,32 +691,44 @@
 	}
 
 	.why-single {
-		background: linear-gradient(
-				0deg,
-				rgba(158, 157, 157, 0.2),
-				rgba(158, 157, 157, 0.2)
-			),
-			rgba(255, 255, 255, 0.63);
-		box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25);
+		background: rgba(255, 241, 248, 0.5);
 
-		.why-body {
-			background: #ffffff;
-			box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.1);
+		box-shadow: 0px 35px 100px 0px rgba(0, 0, 0, 0.15);
+
+		// .why-body {
+		// 	background: #ffffff;
+		// 	box-shadow: 2px 4px 2px rgba(0, 0, 0, 0.1);
+		// }
+		.why-logo {
+			background-color: #fff;
+			svg {
+				path {
+					fill: #000;
+				}
+			}
+			.not-in {
+				fill: none;
+				path {
+					fill: none;
+					stroke: #000;
+				}
+			}
 		}
 	}
 
 	//map
 
 	.roadmap {
-		background: rgba(158, 157, 157, 0.2);
+		background: rgba(255, 255, 255, 0.2);
 		.click-tab {
-			background-color: #1b2336;
+			background: #fff1f8;
+			box-shadow: 0px 35px 100px 0px rgba(0, 0, 0, 0.15);
 			span {
-				color: #fff;
+				color: var(--text-color);
 			}
 			svg {
 				height: 8px;
-				fill: #fff;
+				fill: var(--text-color);
 				margin: 0px 10px;
 			}
 			transition: all 0.2s ease-in;
@@ -709,15 +755,24 @@
 	}
 
 	.case-single {
-		background: #ffffff;
-		// filter: drop-shadow(0px 0px 66.1095px rgba(0, 0, 0, 0.16));
-		box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.22);
+		background: #fff1f8;
+		box-shadow: 0px 35px 100px 0px rgba(0, 0, 0, 0.15);
+		svg {
+			path {
+				stroke: #000;
+			}
+		}
+		.arrow-cl {
+			path {
+				fill: #000;
+			}
+		}
 	}
 
 	//team
 
 	.team {
-		background: rgba(158, 157, 157, 0.2);
+		background: rgba(255, 255, 255, 0.2);
 	}
 
 	.team-single {
@@ -728,7 +783,7 @@
 	//footer
 
 	.main-footer {
-		background: linear-gradient(86.36deg, #84ffc2 -79.85%, #eda4d1 97.26%);
+		background: rgba(132, 255, 194, 0);
 
 		.footer-links {
 			ul {
