--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 body {
-	font-family: "Archivo", sans-serif;
+	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	font-size: 15px;
@@ -13,27 +13,8 @@ body {
 
 [data-theme="dark"] {
 	body {
-		// background: linear-gradient(
-		// 		147.8deg,
-		// 		rgba(52, 70, 116, 0.2) -4.56%,
-		// 		rgba(0, 0, 0, 0) 70.35%
-		// 	),
-		// 	#101520;
+		background: linear-gradient(28deg, #181250 51.26%, #643562 88.57%);
 
-		background: linear-gradient(
-				209.75deg,
-				rgba(0, 105, 55, 0.2) -2.17%,
-				rgba(0, 0, 0, 0) 19.68%,
-				rgba(0, 0, 0, 0) 19.68%
-			),
-			linear-gradient(
-				180deg,
-				rgba(46, 52, 70, 0) 6.39%,
-				rgba(0, 0, 0, 0.66) 18.05%
-			),
-			linear-gradient(43.55deg, #344674 50.84%, rgba(0, 0, 0, 0) 105.99%);
-
-		background-color: #101520;
 	}
 }
 
@@ -84,7 +65,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	font-weight: 500;
+	font-weight: 600;
 	color: var(--title-color);
 }
 p {
