--- a/assets/scss/_btn.scss
+++ b/assets/scss/_btn.scss
@@ -8,21 +8,22 @@
 	font-size: 15px;
 	font-weight: 600;
 	color: var(--title-color);
-	background: linear-gradient(
-		94.26deg,
-		#121726 -35.67%,
-		rgba(23, 30, 46, 0.71) 121.76%
-	);
-	padding: 9px 26px;
-	border: 1px solid #95af37;
+	padding: 9px 28px;
 	border-radius: 10px;
-  box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.16);
-  transition: all .2s ease-in;
-  &:hover{
-    background-color: var(--primary-color);
-    color: var(--title-color);
-  }
+	transition: all 0.2s ease-in;
+	border: 1.6px solid #fff;
+	background: linear-gradient(
+		92deg,
+		rgba(255, 239, 248, 0.4) -5.21%,
+		rgba(255, 152, 204, 0.14) 82.23%,
+		rgba(255, 130, 192, 0.07) 105.21%
+	);
+	box-shadow:
+		0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25) inset,
+		0px 1.689px 1.689px 0px rgba(0, 0, 0, 0.25);
 
-
-
+	&:hover {
+		background-color: var(--primary-color);
+		color: var(--title-color);
+	}
 }
