--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -314,6 +314,9 @@
 			max-width: 300px;
 		}
 	}
+	.map-light{
+		display: none;
+	}
 }
 
 /*--------------------------------------------------------------
@@ -421,23 +424,55 @@
 	@media only screen and (max-width: 482px) {
 		padding: 20px 20px;
 		border-radius: 30px;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
-	svg {
-		width: 100%;
-		max-width: 160px;
-		height: 170px;
-		object-fit: contain;
+	.gole {
+		width: 240px;
+		height: 240px;
+		min-width: 240px;
+		border-radius: 100%;
+		background-color: #402b52;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		@media only screen and (max-width: 1199px) {
-			max-width: 140px;
-			height: 150px;
+			width: 200px;
+			height: 200px;
+			min-width: 200px;
 		}
 		@media only screen and (max-width: 767px) {
-			max-width: 100px;
-			height: 110px;
+			width: 150px;
+			height: 150px;
+			min-width: 150px;
 		}
 		@media only screen and (max-width: 482px) {
-			max-width: 80px;
-			height: 90px;
+			width: 120px;
+			height: 120px;
+			min-width: 120px;
+		}
+		svg {
+			width: 100%;
+			max-width: 160px;
+			height: 170px;
+			object-fit: contain;
+			@media only screen and (max-width: 1199px) {
+				max-width: 130px;
+				height: 140px;
+			}
+			@media only screen and (max-width: 767px) {
+				max-width: 80px;
+				height: 90px;
+			}
+			@media only screen and (max-width: 482px) {
+				max-width: 70px;
+				height: 70px;
+			}
+		}
+		.arrow-cl{
+			@media only screen and (max-width: 482px) {
+				height: 50px;
+			}
 		}
 	}
 
@@ -446,6 +481,9 @@
 		max-width: 650px;
 		@media only screen and (max-width: 767px) {
 			padding-left: 25px;
+		}
+		@media only screen and (max-width: 482px) {
+			padding-left: 16px;
 		}
 		h3 {
 			font-size: 34px;
@@ -736,6 +774,13 @@
 				transform: scale(1.01);
 			}
 		}
+
+		.map-light{
+			display: block;
+		}
+		.map-dark{
+			display: none;
+		}
 	}
 
 	//case
@@ -755,8 +800,12 @@
 	}
 
 	.case-single {
-		background: #fff1f8;
+		background: rgba(255, 241, 248, 0.50);
+
 		box-shadow: 0px 35px 100px 0px rgba(0, 0, 0, 0.15);
+		.gole{
+			background-color: #FFF1F8;
+		}
 		svg {
 			path {
 				stroke: #000;
@@ -776,8 +825,8 @@
 	}
 
 	.team-single {
-		background: #ffffff;
-		box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.12);
+		background: #FFF1F8;
+		box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.12);
 	}
 
 	//footer
